# sopel-youtube

./: MANIFEST.in  NEWS  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi.yml  trusted-publishing.yml
contrib/: release.sh
sopel_modules/youtube/: __init__.py  youtube.py
sopel_youtube/: __init__.py
tests/: test_url_matching.py  test_youtube.py
