[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_youtube", "sopel_youtube.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.md", "NEWS"], content-type="text/markdown" }

[project]
name = "sopel-youtube"
version = "0.6.0"
description = "YouTube link information plugin for Sopel."
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
  "youtube",
]
maintainers = [
  { name="dgw", email="dgw@technobabbl.es" },
]
authors = [
  { name="Else Powell", email="else@asinif.com" },
  { name="Max Gurela", email="maxpowa1@gmail.com" },
  { name="dgw", email="dgw@technobabbl.es" },
]

dynamic = ["readme"]
license = { text="EFL-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Eiffel Forum License (EFL)",
    "License :: OSI Approved :: Eiffel Forum License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
requires-python = ">=3.8, <4"
dependencies = [
    "sopel>=8.0,<9",
    "google-api-python-client>=1.5.5,<3",
]

[project.urls]
"Homepage" = "https://github.com/sopel-irc/sopel-youtube"
"Bug Tracker" = "https://github.com/sopel-irc/sopel-youtube/issues"

[project.entry-points."sopel.plugins"]
youtube = "sopel_youtube"
