[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_youtube", "sopel_youtube.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.md", "NEWS"], content-type="text/markdown" }

[project]
name = "sopel-youtube"
version = "0.7.0.dev0"
description = "YouTube link information plugin for Sopel."
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
  "youtube",
]
maintainers = [
  { name="dgw", email="dgw@technobabbl.es" },
]
authors = [
  { name="Else Powell", email="else@asinif.com" },
  { name="Max Gurela", email="maxpowa1@gmail.com" },
  { name="dgw", email="dgw@technobabbl.es" },
]

dynamic = ["readme"]
license = "EFL-2.0"
license-files = ["COPYING"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
requires-python = ">=3.8, <4"
dependencies = [
    "sopel>=8.0",
    "google-api-python-client>=1.5.5,<3",
]

[project.urls]
"Homepage" = "https://github.com/sopel-irc/sopel-youtube"
"Bug Tracker" = "https://github.com/sopel-irc/sopel-youtube/issues"

[project.entry-points."sopel.plugins"]
youtube = "sopel_youtube"
