[metadata]
name = sopel-youtube
version = 0.5.1
description = YouTube link information plugin for Sopel.
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/sopel-irc/sopel-youtube
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.1,<8
    google-api-python-client>=1.5.5,<1.8; python_version < '3.6'
    google-api-python-client>=1.5.5,<3; python_version >= '3.6'

[options.entry_points]
sopel.plugins =
    youtube = sopel_youtube
